--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,13 +1,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  
+  <!-- Jiwon: below is original code -->
+    <!-- {% if page.title == "Home" %}
+    {{ site.title }}{% if site.tagline %} &middot; {{ site.tagline }}{% endif %}
+  {% else %}
+    {{ page.title }} &middot; {{ site.title }}
+  {% endif %} -->
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}{% if site.tagline %} &middot; {{ site.tagline }}{% endif %}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
+    {{ site.title }}
+
   </title>
 
   <link rel="stylesheet" href="{{ 'styles.css' | relative_url }}">
