--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -18,6 +18,10 @@ h2 {
   font-size: 1.5rem;
 }
 
+h2[id] {
+  scroll-margin-top: 70px; /* masthead 높이보다 살짝 여유 있게 */
+}
+
 h3 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
@@ -91,6 +95,10 @@ blockquote {
 figure {
   margin: 0;
 }
+
+// main{
+//   padding-top: 60px;  /* 네비게이션 높이에 맞게 여백 추가 */
+// }
 
 article {
   margin-bottom: 1.75rem; // 원하는 값으로 조절 (예: 2rem, 1rem 등)
