--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,8 @@
       <footer class="footer">
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved. 
-          <span>Last updated: {{ page.last_modified_at | date: "%B %d, %Y" }}</span>
+          <!-- <span>Last updated: {{ page.last_modified_at | date: "%B %d, %Y" }}</span> -->
+          <span>Last updated: {{ site.last_updated }}</span>
         </small>
       </footer>
     </div>
