Update after hours section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
           <a href="#patents">Patents </a> &middot;
           <a href="#on-going-research-project-names-only">On-going Research </a> &middot;
           <a href="#projects">Projects </a> &middot;
-          <a href="#academic-activities">Academic Activities </a>
+          <a href="#academic-activities">Academic Activities </a> &middot;
+          <a href="#after-hours">After Hours </a>
           <!-- <a href="#scholarships-and-awards">Scholarships and Awards</a> -->
         </nav>
       </header>
