--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,4 +25,8 @@
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ 'atom.xml' | relative_url }}">
 
   {% seo title=false %}
+
+  <meta property="og:image" content="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="robots" content="noimageindex">
 </head>
