--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -22,6 +22,12 @@ h2[id] {
   scroll-margin-top: 70px; /* masthead 높이보다 살짝 여유 있게 */
 }
 
+@media (max-width: 540px) {
+  h2[id] {
+    scroll-margin-top: 80px !important; /* 모바일 환경에서는 더 여유롭게 */
+  }
+}
+
 h3 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
