Update layouts for various widths

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,11 +17,22 @@
       
         <!-- 한 개의 네비 요소만 사용 -->
         <nav class="section-nav">
+          <!-- <ul>
+            <li><a href="#about-me">Home</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#patents">Patents</a></li>
+            <li><a href="#list-of-ongoing-research">Ongoing Research</a></li>
+            <li class="break-line"><a href="#projects">Projects</a></li>
+            <li><a href="#academic-activities">Academic Activities</a></li>
+            <li><a href="#after-hours">After Hours</a></li>
+          </ul> -->
           <ul>
             <li><a href="#about-me">Home</a></li>
             <li><a href="#publications">Publications</a></li>
             <li><a href="#patents">Patents</a></li>
-            <li><a href="#on-going-research-project-names-only">On-going Research</a></li>
+            <li><a href="#list-of-ongoing-research">Ongoing Research</a></li>
+          </ul>
+          <ul>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#academic-activities">Academic Activities</a></li>
             <li><a href="#after-hours">After Hours</a></li>
