--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -22,7 +22,16 @@ h2[id] {
   scroll-margin-top: 70px; /* masthead 높이보다 살짝 여유 있게 */
 }
 
-@media (max-width: 540px) {
+
+@media (max-width: 600px) {
+  .page-title, .post-title, item.title, h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+    word-break: keep-all;      /* 단어를 가능한 한 유지 */
+    white-space: normal;       /* 자연스럽게 줄바꿈 */
+    overflow-wrap: break-word; /* 단어가 너무 길면 단어 단위로 줄바꿈 */
+    line-height: 1.4;
+  }
+
   h2[id] {
     scroll-margin-top: 80px !important; /* 모바일 환경에서는 더 여유롭게 */
   }
@@ -132,51 +141,7 @@ a[href^="#fnref:"] {
 // Custom type
 //
 // Extend paragraphs with `.lead` for larger introductory text.
-
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
-}
-
-// Photo
-.text-image-wrapper {
-  display: flex;
-  align-items: flex-start;
-  gap: 1rem;
-  margin-bottom: 2rem;
-}
-
-.text-content {
-  flex: 1;
-}
-
-.image-content {
-  display: flex;
-  flex-direction: row; // 이미지를 가로로 배열
-  gap: 0.5rem;
-  // align-items: center;
-}
-
-.image-content img {
-  margin-top: 6.5px;
-  margin-bottom: 0px;
-  height: 230px; /* 통일된 높이 */
-  width: auto;   /* 비율 유지 */
-  object-fit: cover;
-  // max-width: 150px; // 필요에 따라 조정
-  // height: auto;
-}
-
-.image-content figcaption {
-  margin-top: 0.12rem;
-  font-size: 0.85rem;
-  color: #444;
-  text-align: center;
-}
-
-.text-image-wrapper {
-  display: flex;
-  flex-direction: row;  // 본문과 이미지를 가로로 배치
-  align-items: flex-start;  // 텍스트와 이미지를 위쪽으로 정렬
-  // gap: 1rem;  // 텍스트와 이미지 사이 간격
 }
