Add google verification html meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,6 +27,7 @@
   {% seo title=false %}
 
   <meta property="og:image" content="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" />
+  <meta name="google-site-verification" content="v7ZZJDmIAZfQ7_SAT_J4_Xtf5Vl73OVzzJIrTZ8TTDM" />
   <meta name="twitter:card" content="summary" />
   <meta name="robots" content="noimageindex">
 </head>
