--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time>. All rights reserved. 
           <!-- <span>Last updated: {{ page.last_modified_at | date: "%B %d, %Y" }}</span> -->
-          <span>Last updated: {{ site.last_updated }}</span>
+          <!-- <span>Last updated: {{ site.last_updated }}</span> -->
         </small>
       </footer>
     </div>
